# flashrust

./: .gitignore
.github/workflows/: build.yml  check.yml  deploys.yml  test.yml
backend/: Cargo.toml  docker-compose.yaml
backend/auth/: Cargo.toml  Dockerfile
backend/auth-database/: Cargo.toml
backend/auth-database/src/: lib.rs
backend/auth-database/src/entities/: credentials.rs  sessions.rs
backend/auth-database/src/entities/credentials/: postgres.rs  sqlite.rs
backend/auth-database/src/entities/sessions/: postgres.rs  sqlite.rs
backend/auth/migrations/: 20250726004058_setup.up.sql
backend/auth/sqlite/: 20250726004058_setup.up.sql
backend/auth/src/: common.rs  database.rs  handlers.rs  main.rs  server.rs
backend/auth/src/database/: postgres.rs  sqlite.rs  traits.rs
backend/auth/src/handlers/: dto.rs  sign_in.rs  sign_up.rs
backend/database/: Cargo.toml
backend/database-macros/: Cargo.toml
backend/database-macros/src/: lib.rs
backend/database/src/: lib.rs  traits.rs
backend/graphql-core/: Cargo.toml
backend/graphql-core/src/: main.rs  schema.rs
