[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"]}
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.5.41", features = ["env", "derive"] }
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"]}
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono"]} 
auth-database = { path = "../auth-database" }
serde = "1.0.219"
regex = "1.11.1"
async-trait = "0.1.88"
argon2 = "0.5.3"
uuid = { version = "1", features = ["v4"] }
cookie = "0.18.1"

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
http-body-util = "0.1.0"
serde_json = "1.0.141"


[features]
default = ["sqlx/postgres", "auth-database/default"]
integration = ["sqlx/postgres", "auth-database/default"]
unit = ["sqlx/sqlite", "auth-database/unit"]
